paths in the config file can now also be relative to PHYLOTA_HOME

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -15,19 +15,19 @@ RDBMS=mysql
 ; and distributed from head node via NFS
 
 ; directory containing GB sequence flat files (as *.seq.gz)
-GB_FLATFILE_DIR=/home/phylota/GB_CURRENT_RELEASE/GB_FLATFILES
+GB_FLATFILE_DIR=data/GB_CURRENT_RELEASE/GB_FLATFILES
 
 ; text file containing the GB release number on which this build is based
-GB_RELNUM_FILE=/home/phylota/GB_CURRENT_RELEASE/GB_FLATFILES/GB_Release_Number
+GB_RELNUM_FILE=conf/GB_Release_Number
 GB_RELNUM=
 
 ; text file containing the date at which the GB release number on which this
 ; build is based was downloaded to our system
-GB_RELNUM_DATE_FILE=/home/phylota/GB_CURRENT_RELEASE/GB_FLATFILES/GB_Release_Number_Date
+GB_RELNUM_DATE_FILE=conf/GB_Release_Number_Date
 GB_RELNUM_DATE=
 
 ; directory containing names.dmp and nodes.dmp files
-GB_TAXONOMY_DIR=/home/phylota/GB_CURRENT_RELEASE/TAXONOMY
+GB_TAXONOMY_DIR=data/GB_CURRENT_RELEASE/TAXONOMY
 
 ; number of sequences to include in each file to be submitted to parallel all
 ; against all BLAST 
@@ -49,6 +49,8 @@ SLAVE_DATA_DIR=/state/partition1/sanderm/allallblast/data
 SLAVE_WORKING_DIR=/state/partition1/sanderm/allallblast/working
 SCRIPT_DIR=/home/sanderm/blast
 HEAD_WORKING_DIR=/home/sanderm/blast/working
+
+; we need these! they are not available from the phylota web site???
 BLAST2BLINKSIMPLE=/home/sanderm/bin/blast2BlinkSimple.pl
 BLAST2BLINKOVERLAP=/home/sanderm/bin/blast2blink.mjs.pl
 PROTEIN_FLAG=F
