added more comments

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -35,6 +35,7 @@ ALL_ALL_CHUNK_SIZE=36000
 
 ; Data type statements for important indexed identifier fields in the mysql
 ; database
+; why is this important???? - RAV
 gi_TYPE=BIGINT UNSIGNED 
 ci_TYPE=INT UNSIGNED 
 ti_TYPE=INT UNSIGNED
@@ -45,14 +46,18 @@ BLAST_DIR=/opt/Bio/ncbi
 ; directory on head node where fasta files for all-all blast are kept, and
 ; where formatdb files will be made
 FASTA_FILE_DIR=/home/sanderm/blast/data
-SLAVE_DATA_DIR=/state/partition1/sanderm/allallblast/data
-SLAVE_WORKING_DIR=/state/partition1/sanderm/allallblast/working
 SCRIPT_DIR=/home/sanderm/blast
 HEAD_WORKING_DIR=/home/sanderm/blast/working
 
 ; we need these! they are not available from the phylota web site???
 BLAST2BLINKSIMPLE=/home/sanderm/bin/blast2BlinkSimple.pl
 BLAST2BLINKOVERLAP=/home/sanderm/bin/blast2blink.mjs.pl
+
+; data and working dir for compute nodes on the cluster
+SLAVE_DATA_DIR=/state/partition1/sanderm/allallblast/data
+SLAVE_WORKING_DIR=/state/partition1/sanderm/allallblast/working
+
+; settings for blast
 PROTEIN_FLAG=F
 PARSE_SEQID_FLAG=F
 BLAST_EXPECT=1.0e-10
@@ -68,6 +73,7 @@ OVERLAP_MODE=2
 SERVER=ceiba.biosci.arizona.edu
 
 ; These are all directories underneath /var/www/
+; let's hope this doesn't literally mean /var/www, e.g. /Library/WebServer - RAV
 CGI=cgi
 ICONS=icons
 IMAGES=images
