Added more explanation about relative paths in config file.

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -10,9 +10,13 @@ PASS=phylota
 DATABASE=phylota
 RDBMS=mysql
 
-; Configuration for setting up the database and parsing the sequences
-; Note that paths should all be absolute because they may get used by tentakel
-; and distributed from head node via NFS
+; Configuration for setting up the database and parsing the sequences.
+; If variables whose names end with DIR or FILE point to relative paths, and
+; prefixing them with the value of environment variable $PHYLOTA_HOME turns
+; these into absolute paths that point to something (which is the intended
+; behaviour), then the Config.pm object that operates on this file will return
+; those absolute paths instead. This is because some of the steps are done on a
+; cluster where different nodes will see a different directory layout.
 
 ; directory containing GB sequence flat files (as *.seq.gz)
 GB_FLATFILE_DIR=data/GB_CURRENT_RELEASE/GB_FLATFILES
