Added config variables for NCBI taxonomy URL and local archive name

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -30,7 +30,11 @@ GB_RELNUM=
 GB_RELNUM_DATE_FILE=data/GB_CURRENT_RELEASE/GB_Release_Number_Date
 GB_RELNUM_DATE=
 
-; directory containing names.dmp and nodes.dmp files
+; variables for the NCBI taxonomy: the URL from whence to download the flat
+; files and the target directory into which names.dmp and nodes.dmp files will
+; be expanded
+GB_TAXONOMY_URL=ftp://ftp.ncbi.nih.gov/pub/taxonomy/taxdump.tar.gz
+GB_TAXONOMY_ARC=taxdump.tar.gz
 GB_TAXONOMY_DIR=data/GB_CURRENT_RELEASE/TAXONOMY
 
 ; number of sequences to include in each file to be submitted to parallel all
