Added path to my install of BLAST_DIR, created relative paths for FASTA_FILE_DIR, SCRIPT_DIR and HEAD_WORKING_DIR. created relative links for BLAST2BLINK

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -2,6 +2,9 @@
 ; Options are key - value pairs with '=' as the delimiter
 ; Anything following a ';' is ignored as a comment.
 
+; Configuration for the all against all blast
+BLAST_DIR=/usr/local/ncbi/blast-2.2.24/
+
 ; Configuration settings for interaction with the mysql database for phylota
 ; browser
 HOST=localhost
@@ -48,18 +51,19 @@ gi_TYPE=BIGINT UNSIGNED
 ci_TYPE=INT UNSIGNED 
 ti_TYPE=INT UNSIGNED
 
-; Configuration for the all against all blast
-BLAST_DIR=/opt/Bio/ncbi
-
 ; directory on head node where fasta files for all-all blast are kept, and
 ; where formatdb files will be made
-FASTA_FILE_DIR=/home/sanderm/blast/data
-SCRIPT_DIR=/home/sanderm/blast
-HEAD_WORKING_DIR=/home/sanderm/blast/working
+FASTA_FILE_DIR=data/BLAST/DATA
+
+; work directory for all-vs-all blast
+HEAD_WORKING_DIR=data/BLAST/WORKING
+
+; directory for phylota pipeline scripts
+SCRIPT_DIR=script/phylota
 
 ; we need these! they are not available from the phylota web site???
-BLAST2BLINKSIMPLE=/home/sanderm/bin/blast2BlinkSimple.pl
-BLAST2BLINKOVERLAP=/home/sanderm/bin/blast2blink.mjs.pl
+BLAST2BLINKSIMPLE=script/phylota/blast2BlinkSimple.pl
+BLAST2BLINKOVERLAP=script/phylota/blast2blink.mjs.pl
 
 ; data and working dir for compute nodes on the cluster
 SLAVE_DATA_DIR=/state/partition1/sanderm/allallblast/data
