Added variables for dump file and sql file

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -12,6 +12,8 @@ USER=sanderm
 PASS=phylota
 DATABASE=phylota
 RDBMS=mysql
+SCHEMA_FILE=script/phylota/schema.sql
+DUMP_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
