Added variables for dump input and output

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -12,8 +12,15 @@ USER=sanderm
 PASS=phylota
 DATABASE=phylota
 RDBMS=mysql
+
+; Location of a concatenated dump file to read into the database
+DUMP_IN_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012
+
+; Name for a dump file to write out of the database
+DUMP_OUT_FILE=data/pb.bu.rel184
+
+; This is the SQL schema for the database
 SCHEMA_FILE=script/phylota/schema.sql
-DUMP_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
