--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -20,7 +20,7 @@ DUMP_IN_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012
 DUMP_OUT_FILE=data/pb.bu.rel184
 
 ; This is the SQL schema for the database
-SCHEMA_FILE=script/phylota/schema.sql
+SCHEMA_FILE=script/schema.sql
 
 ; Configuration for setting up the database and parsing the sequences.
 ; If variables whose names end with DIR or FILE point to relative paths, and
@@ -34,12 +34,12 @@ SCHEMA_FILE=script/phylota/schema.sql
 GB_FLATFILE_DIR=data/GB_CURRENT_RELEASE/GB_FLATFILES
 
 ; text file containing the GB release number on which this build is based
-GB_RELNUM_FILE=data/GB_CURRENT_RELEASE/GB_Release_Number
+GB_RELNUM_FILE=data/GB_CURRENT_RELEASE/GB_FLATFILES/GB_Release_Number
 GB_RELNUM=
 
 ; text file containing the date at which the GB release number on which this
 ; build is based was downloaded to our system
-GB_RELNUM_DATE_FILE=data/GB_CURRENT_RELEASE/GB_Release_Number_Date
+GB_RELNUM_DATE_FILE=data/GB_CURRENT_RELEASE/GB_FLATFILES/GB_Release_Number_Date
 GB_RELNUM_DATE=
 
 ; variables for the NCBI taxonomy: the URL from whence to download the flat
@@ -68,11 +68,11 @@ FASTA_FILE_DIR=data/BLAST/DATA
 HEAD_WORKING_DIR=data/BLAST/WORKING
 
 ; directory for phylota pipeline scripts
-SCRIPT_DIR=script/phylota
+SCRIPT_DIR=script/blast
 
 ; we need these! they are not available from the phylota web site???
-BLAST2BLINKSIMPLE=script/phylota/blast2BlinkSimple.pl
-BLAST2BLINKOVERLAP=script/phylota/blast2blink.mjs.pl
+BLAST2BLINKSIMPLE=script/blast/blast2BlinkSimple.pl
+BLAST2BLINKOVERLAP=script/blast/blast2blink.mjs.pl
 
 ; data and working dir for compute nodes on the cluster
 SLAVE_DATA_DIR=/state/partition1/sanderm/allallblast/data
