added key for GBIF_NCBI_FILE

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -99,3 +99,8 @@ CGI=cgi
 ICONS=icons
 IMAGES=images
 HTML=pb
+
+; This should point to a tab-delimited file that contains GBIF's interpretation
+; of the NCBI taxonomy. Such a file can be downloaded here:
+; http://data.gbif.org/datasets/resource/13565
+GBIF_NCBI_FILE=data/taxonomy-search-13384017156051894011811074617350/taxonomy-search-1338401715605.txt
