Added a key for GB_CPGENOME_DIR, which is for genbank flat files containing chloroplast genomes

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -32,6 +32,7 @@ SCHEMA_FILE=script/schema.sql
 
 ; directory containing GB sequence flat files (as *.seq.gz)
 GB_FLATFILE_DIR=data/GB_CURRENT_RELEASE/GB_FLATFILES
+GB_CPGENOME_DIR=data/GB_CURRENT_RELEASE/PLASTIDS
 
 ; text file containing the GB release number on which this build is based
 GB_RELNUM_FILE=data/GB_CURRENT_RELEASE/GB_FLATFILES/GB_Release_Number
