Added variable RESULTS_DIR for intermediate and final pipeline results, i.e. ephemeral data files.

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -65,6 +65,9 @@ ti_TYPE=INT UNSIGNED
 ; where formatdb files will be made
 FASTA_FILE_DIR=data/BLAST/DATA
 
+; directory on head node where (intermediate) results are stored
+RESULTS_DIR=results
+
 ; work directory for all-vs-all blast
 HEAD_WORKING_DIR=data/BLAST/WORKING
 
