Added variables for dump file locations

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -13,8 +13,10 @@ PASS=phylota
 DATABASE=phylota
 RDBMS=mysql
 
-; Location of a concatenated dump file to read into the database
-DUMP_IN_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012
+; Variables of a concatenated dump file to read into the database
+DUMP_IN_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012.gz
+DUMP_IN_CHUNKS=pb.bu.rel184.4.10.2012.parta{a,b,c,d,e}
+DUMP_IN_URL=http://phylota.net/pb/Download/184/
 
 ; Name for a dump file to write out of the database
 DUMP_OUT_FILE=data/pb.bu.rel184
