Added some SUPERSMART-specific variables

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -1,3 +1,9 @@
+SUPERSMART_SPECIESLIST=results/specieslists/atestlist.txt
+SUPERSMART_COMMONTREE=results/specieslists/atestlist.dnd
+SUPERSMART_ALIGNMENTSTEM=results/specieslists/atestlist.tsv.
+SUPERSMART_ALIGNMENTLIST=results/specieslists/atestlist.lst
+SUPERSMART_VERBOSITY=-v -v
+
 ; Main configuration file for the PhyLoTA Browser scripts to build the database
 ; Options are key - value pairs with '=' as the delimiter
 ; Anything following a ';' is ignored as a comment.
