--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -1,8 +1,37 @@
-SUPERSMART_SPECIESLIST=results/specieslists/atestlist.txt
-SUPERSMART_COMMONTREE=results/specieslists/atestlist.dnd
-SUPERSMART_ALIGNMENTSTEM=results/specieslists/atestlist.tsv.
-SUPERSMART_ALIGNMENTLIST=results/specieslists/atestlist.lst
+; overall verbosity level
 SUPERSMART_VERBOSITY=-v -v
+
+; working directory
+SUPERSMART_WORKDIR=results/specieslists/
+
+; list of species names
+SUPERSMART_SPECIESLIST=atestlist.txt
+
+; NCBI common tree
+SUPERSMART_COMMONTREE=atestlist.dnd
+
+
+; base name for sets of alignment files (stem is followed by a number)
+SUPERSMART_ALIGNMENTSTEM=atestlist.tsv.
+
+; file containing a list of file names comprising a set of alignments
+SUPERSMART_ALIGNMENTLIST=atestlist.lst
+
+; the supermatrix in phylip format
+SUPERSMART_SUPERMATRIX=atestlist.phy
+
+; RAxML compatible constraint tree
+SUPERSMART_RAXMLCON=atestlist.raxml.dnd
+
+; location of RAxML-light, i.e. the checkpointable version that has MPI and PTHREADS
+; implementations and optimizations for sparse supermatrices
+SUPERSMART_RAXML=/usr/local/bin/raxmlLight
+
+; additional RAxML command line arguments
+SUPERSMART_RAXML_ARGS=-S -D -m GTRGAMMA -T 2
+
+; output file from RAxML tree search
+SUPERSMART_RAXML_RESULT=atestlist.out
 
 ; Main configuration file for the PhyLoTA Browser scripts to build the database
 ; Options are key - value pairs with '=' as the delimiter
