added variables related to the latex manuscript

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -33,6 +33,15 @@ SUPERSMART_RAXML_ARGS=-S -D -m GTRGAMMA -T 2
 ; output file from RAxML tree search
 SUPERSMART_RAXML_RESULT=atestlist.out
 
+; directory that holds the manuscript files
+DOC_DIR=doc/
+
+; the latex manuscript
+DOC_IN_FILE=bmc_article.tex
+
+; the resulting output file
+DOC_OUT_FILE=bmc_article.dvi
+
 ; Main configuration file for the PhyLoTA Browser scripts to build the database
 ; Options are key - value pairs with '=' as the delimiter
 ; Anything following a ';' is ignored as a comment.
