adding variables for the inparanoid flat, concatenated FASTA file, which we read into local protein blast

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -33,6 +33,11 @@ SUPERSMART_RAXML_ARGS=-S -D -m GTRGAMMA -T 2
 ; output file from RAxML tree search
 SUPERSMART_RAXML_RESULT=atestlist.out
 
+; inparanoid processed sequences
+INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/processed/FASTA
+INPARANOID_SEQ_FILE=data/INPARANOID/inparanoid.fa
+INPARANOID_LOG_FILE=data/INPARANOID/inparanoid-formatdb.log
+
 ; directory that holds the manuscript files
 DOC_DIR=doc/
 
@@ -58,7 +63,7 @@ DATABASE=phylota
 RDBMS=mysql
 
 ; Variables of a concatenated dump file to read into the database
-DUMP_IN_FILE=~/Documents/phylota/pb.bu.rel184.4.10.2012.gz
+DUMP_IN_FILE=pb.bu.rel184.4.10.2012.gz
 DUMP_IN_CHUNKS=pb.bu.rel184.4.10.2012.parta{a,b,c,d,e}
 DUMP_IN_URL=http://phylota.net/pb/Download/184/
 
