--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -20,18 +20,26 @@ SUPERSMART_ALIGNMENTLIST=atestlist.lst
 ; the supermatrix in phylip format
 SUPERSMART_SUPERMATRIX=atestlist.phy
 
+; the supermatrix in binary format for examl
+SUPERSMART_BIN_SUPERMATRIX=atestlist.bin
+
 ; RAxML compatible constraint tree
 SUPERSMART_RAXMLCON=atestlist.raxml.dnd
 
-; location of RAxML-light, i.e. the checkpointable version that has MPI and PTHREADS
-; implementations and optimizations for sparse supermatrices
-SUPERSMART_RAXML=/usr/local/bin/raxmlLight
+; location of ExaML, the exascale MPI implementation of RAxML
+SUPERSMART_RAXML=/home/karin/ExaML/examl/examl
+
+; location of the ExaML pre-processor
+SUPERSMART_RAXML_PARSER=/home/karin/ExaML/examl/parser
 
 ; additional RAxML command line arguments
-SUPERSMART_RAXML_ARGS=-S -D -m GTRGAMMA -T 2
+SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
 
 ; output file from RAxML tree search
 SUPERSMART_RAXML_RESULT=atestlist.out
+
+; mapping between GI and amino acid sequence
+SUPERSMART_GI2AA_FILE=data/INPARANOID/gi2aa.tsv
 
 ; inparanoid processed sequences
 INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/processed/FASTA
