perhaps this organization prevents all the forked perl processes...

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -38,6 +38,9 @@ SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
 ; output file from RAxML tree search
 SUPERSMART_RAXML_RESULT=atestlist.out
 
+; list of all sequence identifiers in phylota
+SUPERSMART_GILIST=atestlist.gis.txt
+
 ; mapping between GI and amino acid sequence
 SUPERSMART_GI2AA_FILE=data/INPARANOID/gi2aa.tsv
 
