added variable to point to inparanoid schema file

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -48,6 +48,7 @@ SUPERSMART_GI2AA_FILE=data/INPARANOID/gi2aa.tsv
 INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/processed/FASTA
 INPARANOID_SEQ_FILE=data/INPARANOID/inparanoid.fa
 INPARANOID_LOG_FILE=data/INPARANOID/inparanoid-formatdb.log
+INPARANOID_SQL_FILE=script/inparanoid.sql
 
 ; directory that holds the manuscript files
 DOC_DIR=doc/
