--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -49,6 +49,8 @@ INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/proces
 INPARANOID_SEQ_FILE=data/INPARANOID/inparanoid.fa
 INPARANOID_LOG_FILE=data/INPARANOID/inparanoid-formatdb.log
 INPARANOID_SQL_FILE=script/inparanoid.sql
+INPARANOID_SQL_URL=http://inparanoid.sbc.su.se/download/7.0_current/sqltables/
+INPARANOID_SQL_DIR=data/INPARANOID/sqltables/
 
 ; directory that holds the manuscript files
 DOC_DIR=doc/
