added variables for list of merged orthologous alignments and file stem of each merged set (which is suffixed with the base InParanoid protein ID)

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -10,9 +10,14 @@ SUPERSMART_SPECIESLIST=atestlist.txt
 ; NCBI common tree
 SUPERSMART_COMMONTREE=atestlist.dnd
 
-
 ; base name for sets of alignment files (stem is followed by a number)
 SUPERSMART_ALIGNMENTSTEM=atestlist.tsv.
+
+; base name for merged, orthologous alignment files
+SUPERSMART_MERGEDSTEM=atestlist-merged-
+
+; file containing a list of file names comprising a set of merged alignments
+SUPERSMART_MERGEDLIST=atestlist-merged.lst
 
 ; file containing a list of file names comprising a set of alignments
 SUPERSMART_ALIGNMENTLIST=atestlist.lst
