now configured for primates

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -2,34 +2,34 @@
 SUPERSMART_VERBOSITY=-v -v
 
 ; working directory
-SUPERSMART_WORKDIR=results/specieslists/
+SUPERSMART_WORKDIR=results/primates/
 
 ; list of species names
-SUPERSMART_SPECIESLIST=atestlist.txt
+SUPERSMART_SPECIESLIST=primates.txt
 
 ; NCBI common tree
-SUPERSMART_COMMONTREE=atestlist.dnd
+SUPERSMART_COMMONTREE=primates.dnd
 
 ; base name for sets of alignment files (stem is followed by a number)
-SUPERSMART_ALIGNMENTSTEM=atestlist.tsv.
+SUPERSMART_ALIGNMENTSTEM=primates.tsv.
 
 ; base name for merged, orthologous alignment files
-SUPERSMART_MERGEDSTEM=atestlist-merged-
+SUPERSMART_MERGEDSTEM=primates-merged-
 
 ; file containing a list of file names comprising a set of merged alignments
-SUPERSMART_MERGEDLIST=atestlist-merged.lst
+SUPERSMART_MERGEDLIST=primates-merged.lst
 
 ; file containing a list of file names comprising a set of alignments
-SUPERSMART_ALIGNMENTLIST=atestlist.lst
+SUPERSMART_ALIGNMENTLIST=primates.lst
 
 ; the supermatrix in phylip format
-SUPERSMART_SUPERMATRIX=atestlist.phy
+SUPERSMART_SUPERMATRIX=primates.phy
 
 ; the supermatrix in binary format for examl
-SUPERSMART_BIN_SUPERMATRIX=atestlist.bin
+SUPERSMART_BIN_SUPERMATRIX=primates.bin
 
 ; RAxML compatible constraint tree
-SUPERSMART_RAXMLCON=atestlist.raxml.dnd
+SUPERSMART_RAXMLCON=primates.raxml.dnd
 
 ; location of ExaML, the exascale MPI implementation of RAxML
 SUPERSMART_RAXML=/home/karin/ExaML/examl/examl
@@ -41,10 +41,10 @@ SUPERSMART_RAXML_PARSER=/home/karin/ExaML/parser/parser
 SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
 
 ; output file from RAxML tree search
-SUPERSMART_RAXML_RESULT=atestlist.out
+SUPERSMART_RAXML_RESULT=primates.out
 
 ; list of all sequence identifiers in phylota
-SUPERSMART_GILIST=atestlist.gis.txt
+SUPERSMART_GILIST=primates.gis.txt
 
 ; mapping between GI and amino acid sequence
 SUPERSMART_GI2AA_FILE=data/INPARANOID/gi2aa.tsv
@@ -65,6 +65,9 @@ DOC_IN_FILE=bmc_article.tex
 
 ; the resulting output file
 DOC_OUT_FILE=bmc_article.dvi
+
+; location of the fossil calibration table
+FOSSIL_TABLE_FILE=data/FOSSILS/Fossiletable.txt
 
 ; Main configuration file for the PhyLoTA Browser scripts to build the database
 ; Options are key - value pairs with '=' as the delimiter
