added variable for blastall

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -1,5 +1,5 @@
 ; overall verbosity level
-SUPERSMART_VERBOSITY=-v -v
+SUPERSMART_VERBOSITY=-v 
 
 ; working directory
 SUPERSMART_WORKDIR=results/primates/
@@ -31,11 +31,20 @@ SUPERSMART_BIN_SUPERMATRIX=primates.bin
 ; RAxML compatible constraint tree
 SUPERSMART_RAXMLCON=primates.raxml.dnd
 
+; we should do this as follows:
+; - by default all binaries are assumed to be on the PATH
+; - we don't hardcode binary locations in this config file under git
+; - all binaries should be called SUPERSMART_<name>_BIN
+; - the test suite can then verify whether they are found
+; - we also need to put muscle and blast in the list of binaries
 ; location of ExaML, the exascale MPI implementation of RAxML
-SUPERSMART_RAXML=/home/karin/ExaML/examl/examl
+SUPERSMART_RAXML=examl
 
 ; location of the ExaML pre-processor
-SUPERSMART_RAXML_PARSER=/home/karin/ExaML/parser/parser
+SUPERSMART_RAXML_PARSER=parser
+
+; location of standalon blastall, I've been using version 2.2.24
+BLASTALL_BIN=blastall
 
 ; additional RAxML command line arguments
 SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
