--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -7,6 +7,9 @@ SUPERSMART_WORKDIR=results/primates/
 ; list of species names
 SUPERSMART_SPECIESLIST=primates.txt
 
+; table of TNRS species names
+SUPERSMART_SPECIESTABLE=primates-table.txt
+
 ; NCBI common tree
 SUPERSMART_COMMONTREE=primates.dnd
 
@@ -51,12 +54,6 @@ SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
 
 ; output file from RAxML tree search
 SUPERSMART_RAXML_RESULT=primates.out
-
-; list of all sequence identifiers in phylota
-SUPERSMART_GILIST=primates.gis.txt
-
-; mapping between GI and amino acid sequence
-SUPERSMART_GI2AA_FILE=data/INPARANOID/gi2aa.tsv
 
 ; inparanoid processed sequences
 INPARANOID_SEQ_URL=http://inparanoid.sbc.su.se/download/current/sequences/processed/FASTA
