added comments to clean up proliferation of variables in config file

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -7,30 +7,39 @@ SUPERSMART_WORKDIR=results/primates/
 ; list of species names
 SUPERSMART_SPECIESLIST=primates.txt
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; table of TNRS species names
 SUPERSMART_SPECIESTABLE=primates-table.txt
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; NCBI common tree
 SUPERSMART_COMMONTREE=primates.dnd
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; base name for sets of alignment files (stem is followed by a number)
 SUPERSMART_ALIGNMENTSTEM=primates.tsv.
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; base name for merged, orthologous alignment files
 SUPERSMART_MERGEDSTEM=primates-merged-
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; file containing a list of file names comprising a set of merged alignments
 SUPERSMART_MERGEDLIST=primates-merged.lst
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; file containing a list of file names comprising a set of alignments
 SUPERSMART_ALIGNMENTLIST=primates.lst
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; the supermatrix in phylip format
 SUPERSMART_SUPERMATRIX=primates.phy
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; the supermatrix in binary format for examl
 SUPERSMART_BIN_SUPERMATRIX=primates.bin
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; RAxML compatible constraint tree
 SUPERSMART_RAXMLCON=primates.raxml.dnd
 
@@ -52,6 +61,7 @@ BLASTALL_BIN=blastall
 ; additional RAxML command line arguments
 SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
 
+; FIXME! This should be a name that we create in the work dir from the species list name
 ; output file from RAxML tree search
 SUPERSMART_RAXML_RESULT=primates.out
 
