cleanup config file, this can be made much smaller

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -1,11 +1,16 @@
 ; overall verbosity level
-SUPERSMART_VERBOSITY=-v 
+VERBOSITY=-v
+
+; number of MPI nodes
+NODES=2
+
+MPIRUN_BIN=mpirun
 
 ; working directory
-SUPERSMART_WORKDIR=results/primates/
+WORKDIR=results/primates/
 
 ; list of species names
-SUPERSMART_SPECIESLIST=primates.txt
+NAMELIST=primates.txt
 
 ; FIXME! This should be a name that we create in the work dir from the species list name
 ; table of TNRS species names
@@ -50,16 +55,16 @@ SUPERSMART_RAXMLCON=primates.raxml.dnd
 ; - the test suite can then verify whether they are found
 ; - we also need to put muscle and blast in the list of binaries
 ; location of ExaML, the exascale MPI implementation of RAxML
-SUPERSMART_RAXML=examl
+EXAML_BIN=examl
 
 ; location of the ExaML pre-processor
-SUPERSMART_RAXML_PARSER=parser
+PARSER_BIN=parser
 
 ; location of standalon blastall, I've been using version 2.2.24
 BLASTALL_BIN=blastall
 
 ; additional RAxML command line arguments
-SUPERSMART_RAXML_ARGS=-S -D -m GAMMA
+EXAML_ARGS=-S -D -m GAMMA
 
 ; FIXME! This should be a name that we create in the work dir from the species list name
 ; output file from RAxML tree search
