adding variable for size of the supersmart taxa chunks / concatenated alignments / user trees

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -30,6 +30,9 @@ GUNZIP_BIN=gunzip
 ; number of MPI nodes
 NODES=2
 
+; approximate size of supersmart chunks
+CHUNKSIZE=10
+
 ; additional RAxML command line arguments
 EXAML_ARGS=-S -D -m GAMMA
 
