added specieslist to ignore directory

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ data/INPARANOID
 _Inline/
 MYMETA.*
 results/primates/*
+results/specieslists/*
 results/alcids/*
 results/alcids_bak/*
 data/FOSSILS/*
