the name list needs to be a location relative to the project root, not the work dir

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -5,7 +5,7 @@ VERBOSITY=-v
 WORK_DIR=results/primates/
 
 ; list of species names
-NAME_LIST_FILE=primates.txt
+NAME_LIST_FILE=results/primates/primates.txt
 
 ; location of the fossil calibration table
 FOSSIL_TABLE_FILE=data/FOSSILS/Fossiletable.txt
