added variables for muscle and consense

--- a/conf/phylota.ini
+++ b/conf/phylota.ini
@@ -26,6 +26,8 @@ PERL_BIN=perl
 CURL_BIN=curl
 WGET_BIN=wget
 GUNZIP_BIN=gunzip
+MUSCLE_BIN=muscle
+CONSENSE_BIN=consense
 
 ; number of MPI nodes
 NODES=2
