added skip pattern for results directories

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ results/specieslists/*
 results/alcids/*
 results/alcids_bak/*
 results/sea/*
+results/bootstrap/*
+results/gentianales-2013/*
 data/FOSSILS/*
